1. 添加Glide图片加载工具;

--- a/app/src/main/res/layout/rv_home_item.xml
+++ b/app/src/main/res/layout/rv_home_item.xml
@@ -17,11 +17,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <ImageView
+                android:id="@+id/iv_pic"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scaleType="centerInside"/>
 
             <TextView
                 android:id="@+id/tv_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/iv_pic"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:padding="5dp"/>
         </RelativeLayout>
