--- a/app/src/main/res/layout/rv_home_item.xml
+++ b/app/src/main/res/layout/rv_home_item.xml
@@ -8,10 +8,9 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:cardCornerRadius="5dp"
-        app:cardElevation="5dp"
-        android:layout_margin="5dp">
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="@dimen/home_rv_item_corner_radius"
+        app:cardElevation="@dimen/home_rv_item_elevation">
 
         <RelativeLayout
             android:layout_width="match_parent"
